--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "starlit/utils": "~0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
-        "monolog/monolog": "~1.0"
+        "phpunit/phpunit": "^5.5",
+        "monolog/monolog": "^1.0"
     },
     "autoload": {
         "psr-4": {"Starlit\\Db\\": "src"}
