--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "monolog/monolog": "^1.0"
+        "monolog/monolog": "^1.0",
+        "nesbot/carbon": "^1.2"
     },
     "autoload": {
         "psr-4": {"Starlit\\Db\\": "src"}
     },
     "suggest": {
-        "monolog/monolog": "If you want to use the provided Monolog database logger handler"
+        "monolog/monolog": "If you want to use the provided Monolog database logger handler",
+        "nesbot/carbon": "Convert dateTime type into Carbon objects instead of DateTime"
     }
 }
