adds ext-pdo package to composer

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": ">=7.0",
+        "ext-pdo": "*",
         "ext-pdo_mysql": "*",
         "starlit/utils": "~0.1"
     },
