--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=7.0",
         "ext-pdo": "*",
         "ext-pdo_mysql": "*",
-        "starlit/utils": "~0.1"
+        "starlit/utils": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
